tests/ui/async-await/issue-108572.stderr
error[E0599]: no method named `poll` found for opaque type `impl Future<Output = ()>` in the current scope
  --> $DIR/issue-108572.rs:12:9
   |
LL |     fut.poll(cx);
   |         ^^^^ method not found in `impl Future<Output = ()>`
   |
   = help: method `poll` found on `Pin<&mut impl Future<Output = ()>>`, see documentation for `std::pin::Pin`
   = help: self type must be pinned to call `Future::poll`, see https://rust-lang.github.io/async-book/part-reference/pinning.html
help: consider pinning the expression
   |
LL ~     let mut pinned = std::pin::pin!(fut);
LL ~     pinned.as_mut().poll(cx);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
